--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,12 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="CoreUI - Open Source Bootstrap Admin Template">
-    <meta name="author" content="Łukasz Holeczek">
-    <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,Angular 2,Angular4,Angular 4,jQuery,CSS,HTML,RWD,Dashboard,React,React.js,Vue,Vue.js">
+    <meta name="description" content="ReadyGo! - Admin Manager">
     <link rel="shortcut icon" href="img/favicon.png">
-    <title>CoreUI - Open Source Bootstrap Admin Template</title>
+    <title>ReadyGo! - Admin Manager</title>
   </head>
 
   <!-- BODY options, add following classes to body to change options
